manifest/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiserver-deployment
  namespace: rest-api-namespace
  labels:
    app: restapiserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: restapiserver
  template:
    metadata:
      labels:
        app: restapiserver
    spec:
      containers:
      - name: restapiserver
        image: acrworkflow1682955432389.azurecr.io/image-workflow-1682955432389:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
              memory: "256Mi"
              cpu: "1000m"
        ports:
        - containerPort: 8080
          name: restapiserver-port
