manifest/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: apiserver-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: apiserver
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8080
