manifest/api-basic-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  labels:
    name: api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-path: /health
    appgw.ingress.kubernetes.io/health-probe-protocol: "HTTP"
    appgw.ingress.kubernetes.io/health-probe-port: "8080"
spec:
  rules:
  - host: pocvivahealth.com
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: apiserver-service
            port: 
              number: 8080
      - pathType: Exact
        path: "/status"
        backend:
          service:
            name: apiserver-service
            port: 
              number: 8080
